[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-llm-wiki"
version = "0.1.0"
description = "Personal LLM-powered knowledge wiki - turn any folder into a queryable knowledge graph with Obsidian-compatible output"
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
]

[project.optional-dependencies]
pdf = ["pypdf", "html2text"]
leiden = ["graspologic"]
office = ["python-docx", "openpyxl"]
all = ["pypdf", "html2text", "graspologic", "python-docx", "openpyxl"]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_llm_wiki*"]
