[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-llm-wiki"
version = "0.1.0"
description = "Turn any folder into a queryable knowledge graph with Obsidian output. Inspired by Andrej Karpathy's LLM Wiki concept."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["knowledge-graph", "obsidian", "wiki", "ast", "tree-sitter", "llm-wiki"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/phuc-nt/my-llm-wiki"
Repository = "https://github.com/phuc-nt/my-llm-wiki"
Issues = "https://github.com/phuc-nt/my-llm-wiki/issues"
dependencies = [
    "networkx",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
]

[project.optional-dependencies]
pdf = ["pypdf", "html2text"]
leiden = ["graspologic"]
office = ["python-docx", "openpyxl"]
all = ["pypdf", "html2text", "graspologic", "python-docx", "openpyxl"]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_llm_wiki*"]
