[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-llm-wiki"
version = "0.2.0"
description = "Turn any folder into a queryable knowledge graph. Inspired by Andrej Karpathy's LLM Wiki concept."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "phuc-nt"}]
keywords = ["knowledge-graph", "wiki", "ast", "tree-sitter", "llm-wiki", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "networkx",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
]

[project.urls]
Homepage = "https://github.com/phuc-nt/my-llm-wiki"
Repository = "https://github.com/phuc-nt/my-llm-wiki"
Issues = "https://github.com/phuc-nt/my-llm-wiki/issues"

[project.scripts]
llm-wiki = "my_llm_wiki.__main__:main"

[project.optional-dependencies]
pdf = ["pypdf", "html2text"]
leiden = ["graspologic"]
office = ["python-docx", "openpyxl"]
all = ["pypdf", "html2text", "graspologic", "python-docx", "openpyxl"]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_llm_wiki*"]

[tool.setuptools.package-data]
my_llm_wiki = ["SKILL.md"]
